@@ -1,7 +1,5 @@
 
 TODO
-
-  * Update Readme when 0.83.dev becomes a release.
   
   * Client & Connection
     - Make a #ping method that does the "SELECT 1" when not closed.
@@ -10,5 +8,4 @@ TODO
     
   * Result Set
     - See if we can make a binary string of [timestamp] type.
-
 
