@@ -34,7 +34,6 @@ task :compile => ["ports:freetds"] unless ENV['TINYTDS_SKIP_PORTS']
 Rake::ExtensionTask.new('tiny_tds', gemspec) do |ext|
   ext.lib_dir = 'lib/tiny_tds'
   ext.config_options << "--enable-iconv" unless ENV['TINYTDS_SKIP_PORTS']
-
   if RUBY_PLATFORM =~ /mswin|mingw/ then
     # Define target for extension (supporting fat binaries).
     RUBY_VERSION =~ /(\d+\.\d+)/
